plugins {
  id 'application'
  id 'org.openjfx.javafxplugin' version '0.1.0'
  id 'org.beryx.jlink' version '3.0.1'
}

group = 'org.example'
version = '1.0.0'

repositories {
  mavenCentral()
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

dependencies {
  implementation 'org.controlsfx:controlsfx:11.2.1'
  implementation 'org.xerial:sqlite-jdbc:3.46.0.0'
}

//tasks.withType(JavaExec) {
//  jvmArgs = [
//          '--module-path', '/Users/jangsohyun/JavaFX/javafx-sdk-24.0.2/lib',
//          '--add-modules', 'javafx.controls,javafx.fxml'
//  ]
//}

application {
  mainClass = 'org.example.salesledger.HelloApplication'
}

javafx {
  version = '22.0.2'
  modules = ['javafx.controls', 'javafx.fxml']
}

jlink {
  // JavaFX 의존성 자동 포함
  addExtraDependencies('javafx')

  launcher {
    name = 'SalesLedger'
  }

  jpackage {
    installerType = 'exe'
    appVersion = project.version
    vendor = 'YourName'

    installerOptions = [
            '--win-menu',
            '--win-shortcut'
    ]

    // 아이콘은 파일이 있을 때만 지정
    def ico = file('packaging/icon.ico')
    if (ico.exists()) {
      icon = ico
    }
  }
}
